[regression] [bisected] Mouse cursor stuttering/jerkiness on Alder Lake with 5.19
I have a new Framework Laptop with an i7-1280P and Xe graphics, running Debian bookworm, X11 (using the built-in modesetting driver, not xserver-xorg-video-intel), and Xfce, with no external monitors connected (just the LCD panel on eDP-1).
With the stock Debian 5.18.16 kernel, all is well. I decided to try 5.19, and tried both the version in Debian experimental, and also self-compiled 5.19.3 and 5.19.4 from vanilla upstream, and now have just tried drm-tip (@ 77ebe479d84890d78217fb7a6b556f7de71866f3) as well. However, with any of the 5.19 kernels (and drm-tip), the mouse cursor would stutter and jerk when using the touchpad. It's a little odd: there is no jerkiness immediately after starting X, but within 30-60 seconds or so, it would begin without fail. The jerkiness would go away if I were to hold the touchpad button down and drag while selecting text (server grab changing something?), but then immediately come back after releasing the button. If I were patient, and waited a bit (not sure how long, maybe 7-10 minutes?), the jerkiness would go away, but then would come back, persistently again, a few minutes later.
I bisected, and git came up with this as the bad commit:
805f04d42a6b5f4187935b43c9c39ae03ccfa761 is the first bad commit
commit 805f04d42a6b5f4187935b43c9c39ae03ccfa761
Author: José Roberto de Souza <jose.souza@intel.com>
Date: Tue Apr 5 08:53:44 2022 -0700
drm/i915/display/psr: Use continuos full frame to handle frontbuffer invalidations
I checked out v5.19.4, reverted that commit (and then also c837e027436df69d20474bd3fdea2c6b3971aa6f, as that depends on the first one), and that fixed the problem.
Full dmesg output with drm debug enabled: i915-debug-dmesg.txt
Edited to add: I also tried reverting those commits on drm-tip, and that also solved the problem... as I expected, but wanted to be sure.